# manager-example-incomplete

contracts/: Cargo.toml
contracts/counter/: Cargo.toml
contracts/counter/src/: contract.rs  lib.rs
contracts/manager/: Cargo.toml
contracts/manager/schema/: execute_msg.json  query_msg.json
contracts/manager/src/: contract.rs  error.rs  integration_tests.rs
counter/src/: helpers.rs
manager/examples/: schema.rs
manager/schema/: get_contracts_response.json  state.json
manager/src/: contract.rs  helpers.rs  integration_tests.rs  msg.rs  state.rs
