[workspace]
members = ["contracts/*"]


[profile.release.package.counter]
codegen-units = 1
incremental = false

[profile.release.package.manager]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false